@@ -400,6 +400,7 @@ int pnumconv(char *page, int attr)
 			case 'c':
 			case 'C':
 				if (i==0) cc=100;
+				else {
 					switch (page[i-1]) {
 					case 'x':
 					case 'X':
@@ -418,6 +419,7 @@ int pnumconv(char *page, int attr)
 					default:
 						break;
 					}
+				}
 				break;
 
 			case 'd':
@@ -444,6 +446,7 @@ int pnumconv(char *page, int attr)
 			case 'm':
 			case 'M':
 				if (i==0) cc=1000;
+				else {
 					switch (page[i-1]) {
 					case 'c':
 					case 'C':
@@ -458,6 +461,7 @@ int pnumconv(char *page, int attr)
 					default:
 						break;
 					}
+				}
 				break;
 
 			default:
