@@ -5,3 +5,101 @@
 \indexentry{foo}{II-10}
 \indexentry{foo}{II-20}
 \indexentry{foo}{II-30}
+
+\indexentry{bar}{I-1}
+\indexentry{bar}{II-1}
+\indexentry{bar}{III-1}
+\indexentry{bar}{IV-1}
+\indexentry{bar}{V-1}
+\indexentry{bar}{VI-1}
+\indexentry{bar}{VII-1}
+\indexentry{bar}{VIII-1}
+\indexentry{bar}{IX-1}
+\indexentry{bar}{X-1}
+\indexentry{bar}{XI-1}
+\indexentry{bar}{XX-1}
+\indexentry{bar}{XXX-1}
+\indexentry{bar}{XL-1}
+\indexentry{bar}{L-1}
+\indexentry{bar}{LX-1}
+\indexentry{bar}{LXX-1}
+\indexentry{bar}{LXXX-1}
+\indexentry{bar}{XC-1}
+\indexentry{bar}{XCV-1}
+\indexentry{bar}{C-1}
+\indexentry{bar}{CX-1}
+\indexentry{bar}{CV-1}
+\indexentry{bar}{CC-1}
+\indexentry{bar}{CCC-1}
+\indexentry{bar}{CD-1}
+\indexentry{bar}{D-1}
+\indexentry{bar}{DC-1}
+\indexentry{bar}{DCC-1}
+\indexentry{bar}{DCCC-1}
+\indexentry{bar}{CM-1}
+\indexentry{bar}{M-1}
+\indexentry{bar}{MC-1}
+\indexentry{bar}{MD-1}
+\indexentry{bar}{MM-1}
+\indexentry{bar}{MMM-1}
+
+\indexentry{baz}{i}
+\indexentry{baz}{ii}
+\indexentry{baz}{iii}
+\indexentry{baz}{iv}
+\indexentry{baz}{v}
+\indexentry{baz}{vi}
+\indexentry{baz}{vii}
+\indexentry{baz}{viii}
+\indexentry{baz}{ix}
+\indexentry{baz}{x}
+\indexentry{baz}{xi}
+\indexentry{baz}{xx}
+\indexentry{baz}{xxx}
+\indexentry{baz}{xl}
+\indexentry{baz}{l}
+\indexentry{baz}{lx}
+\indexentry{baz}{lxx}
+\indexentry{baz}{lxxx}
+\indexentry{baz}{xc}
+\indexentry{baz}{xci}
+\indexentry{baz}{xcii}
+\indexentry{baz}{xciii}
+\indexentry{baz}{xciv}
+\indexentry{baz}{xcv}
+\indexentry{baz}{xcvi}
+\indexentry{baz}{xcvii}
+\indexentry{baz}{xcviii}
+\indexentry{baz}{xcix}
+\indexentry{baz}{c}
+\indexentry{baz}{ci}
+\indexentry{baz}{cii}
+\indexentry{baz}{ciii}
+\indexentry{baz}{civ}
+\indexentry{baz}{cv}
+\indexentry{baz}{cvi}
+\indexentry{baz}{cvii}
+\indexentry{baz}{cviii}
+\indexentry{baz}{cix}
+\indexentry{baz}{cx}
+\indexentry{baz}{cc}
+\indexentry{baz}{ccc}
+\indexentry{baz}{cd}
+\indexentry{baz}{d}
+\indexentry{baz}{dc}
+\indexentry{baz}{dcc}
+\indexentry{baz}{dccc}
+\indexentry{baz}{cm}
+\indexentry{baz}{m}
+\indexentry{baz}{mc}
+\indexentry{baz}{mcc}
+\indexentry{baz}{mccc}
+\indexentry{baz}{mcd}
+\indexentry{baz}{md}
+\indexentry{baz}{mdc}
+\indexentry{baz}{mdcc}
+\indexentry{baz}{mdccc}
+\indexentry{baz}{mcm}
+\indexentry{baz}{mm}
+\indexentry{baz}{mmm}
+
