@@ -1,3 +1,12 @@
+2025-10-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* convert.c: Fix bug of out of bound read.
+	Thanks to Ryan Lee.
+	https://www.tug.org/pipermail/tex-live/2025-October/051800.html
+	https://tug.org/pipermail/tex-k/2025-October/004208.html
+	* tests/romalpA.idx, tests/romalpA-[56].ind:
+	Add tests for roman numerals.
+
 2025-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version 1.21  Stable version.
