@@ -1,3 +1,8 @@
+2025-10-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/romalpA.idx, tests/romalpA-[56].ind:
+	Add tests for roman numerals.
+
 2025-09-21  Karl Berry  <karl@freefriends.org>
 
 	* tests/nested-range-test.pl: check return status of test run.
